2003-07-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/nnshimbun.el (nnshimbun-possibly-change-group): Create
	parent directories if they do not exist, for hierarchical groups
	that include periods in their group names.

2003-07-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-makeinfo): Force texinfmt.elc to load
	texinfo.elc from the correct place.  <cf. [emacs-w3m:05573]>

2003-07-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-get-headers): Convert CRLF to LF.
	(shimbun-make-contents): Convert CRLF to LF instead of removing CR.

2003-07-19  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-e21.el (w3m-euc-japan-encoder): Fixed comment.

	* shimbun/sb-h14m.el: Removed.

2003-07-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release emacs-w3m-1.3.6 from emacs-w3m-1_3 branch.

2003-07-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-fml.el (shimbun-get-headers): Call
	`shimbun-create-header' instead of `shimbun-make-header'
	(shimbun-make-contents): Do not encode header attributes, to
	follow the change of shimbun header structure.

	* shimbun/shimbun.el (shimbun-header): New class.
	(shimbun-header-subject, shimbun-header-set-subject,
	shimbun-header-from, shimbun-header-set-from, shimbun-header-date,
	shimbun-header-set-date, shimbun-header-id, shimbun-header-set-id,
	shimbun-header-references, shimbun-header-set-references,
	shimbun-header-chars, shimbun-header-set-chars,
	shimbun-header-lines, shimbun-header-set-lines,
	shimbun-header-xref, shimbun-header-set-xref,
	shimbun-header-extra, shimbun-header-set-extra): Lunafied.
	(shimbun-header-normalize): New internal function.
	(shimbun-create-header): New function.
	(shimbun-make-header): Rewritten to use the above function.
	(shimbun-header-insert, shimbun-from-address): Follow the above
	changes.

	* w3m-e21.el (w3m-ccl-get-ucs-codepoint-with-emacs-unicode):
	Remove `translate-character'.
	(w3m-euc-japan-encoder, w3m-iso-latin-1-encoder): Select