@@ -1,3 +1,8 @@
+2003-07-24  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* w3m-form.el (w3m-form-parse-and-fontify): 
+	Fix for the pages in which form_int appears after input_alt.
+
 2003-07-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* shimbun/nnshimbun.el (nnshimbun-possibly-change-group): Create
